# hexaxia-das

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  rag-testing-methods.md
.claude/: README.md
.claude/agents/: das-engineer.md  das-operator.md
.claude/skills/corpus-audit/: SKILL.md
.claude/skills/corpus-ingest/: SKILL.md
.claude/skills/das-feature-tdd/: SKILL.md
.claude/skills/embedding-eval/: SKILL.md
.claude/skills/rag-nav-retrieval/: SKILL.md
.claude/skills/retrieval-design/: SKILL.md
.claude/skills/synapaxia-memory/: SKILL.md
.claude/skills/writing-passport-summaries/: SKILL.md
.github/workflows/: ci.yml
das/: cli.py  config.py  creator.py  manifest.py  naming.py  validator.py
docs/: address-segment-width.md  agent-guide.md  agentic-memory.md  cli-reference.md  concepts.md  corpus-audit.md  corpus-boundaries.md  corpus-conventions.md  corpus-layout-patterns.md  das-migration-convention.md  dynamic-corpus-management.md  federation.md  migration.md  passport-formats.md  passports.md  philosophy.md  project-registry.md  quickstart.md  restructuring-a-corpus.md  spec.md  writing-passport-summaries.md
docs/research/: benchmark-design-260528.md  naming-convention-analysis-260528.md  nav-test-findings-260528.md
docs/whitepapers/: das-position-paper.md
jdx/: cli.py  config.py  manifest.py  validator.py
tests/: conftest.py  test_cli.py  test_config.py  test_creator.py  test_manifest.py  test_naming.py  test_validator.py
(+7 files in other folders)
